<resources>
    <string name="app_name">My Daily Pet</string>
    <string name="label_name">Name</string>
    <string name="label_breed">Breed</string>
    <string name="label_date">Date</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="select_sex_pet">Select sex pet</string>
    <string name="message_success">Success</string>
    <string name="message_error">Error in process. See you log</string>
    <string name="text_select_option">Select Option</string>
    <string name="text_negative_button">Cancel</string>
    <string name="text_positive_button" translatable="false">OK</string>

    <!--Home Screen-->
    <string name="title_home_menu">Home</string>
    <string name="title_profile_menu">Profile</string>
    <string name="text_not_reminder_yet_home">Not reminders today or you not add reminders</string>
    <string name="text_reminders">Today reminders</string>
    <string name="text_my_pets">My Pets</string>
    <string name="text_add_reminder">Add reminder</string>
    <string name="text_login" translatable="false">Login</string>
    <string name="text_logout">Logout</string>
    <string name="text_add_pet">Add Pet</string>
    <string name="text_reminders_daily">Reminders</string>
    <string name="text_tasks">Tasks</string>
    <string name="home_label">Home</string>
    <string name="title_help">Help</string>
    <string name="message_help_add_reminder">On this screen you can set a reminder for one of your registered pets. Note that you need to have a pet registered to be able to set a reminder!!</string>
    <string name="message_help_today_reminders_home">Here are the reminders for today. If you have more than one reminder, drag to the side to see all reminders. If you want to see more details about the reminder, click on the reminder.</string>
    <string name="message_help_my_pet_home">If you have registered pets, your pets will be shown here.\nDrag to the right side for pet actions or click to see your pet\'s tasks.</string>
    <string name="delete_pet_title_pop_menu">Delete pet </string>
    <string name="title_alert_delete_pet">Delete this pet?</string>
    <string name="message_alert_delete_pet_list">You will delete all data for this pet.</string>
    <!--Add Pet Screen-->
    <string name="title_add_pet">Add pet</string>
    <string name="hint_add_birth">Add birth</string>
    <string name="btn_text_add_my_pet">Add my pet</string>
    <string name="label_sex">Sex</string>
    <string name="subtitle_add_pet">Add your pet and start your daily</string>
    <string name="label_birth">Birth</string>
    <string name="label_weight">Weight</string>
    <string name="hint_weight">0.00</string>
    <string name="label_weight_metric">Pounds</string>
    <string name="text_see_all">See all</string>
    <string name="label_animal" translatable="false">Animal</string>
    <string name="notification_title_birthday">Happy Birth Day, %s!!!</string>
    <string name="notification_description_birthday">"This is special day for you and %s."</string>
    <string name="title_tb_update_pet">Update pet</string>
    <string name="description_tb_update_pet">Update personal data this pet</string>
    <string name="text_update_pet">Update pet</string>
    <string name="message_pet_updated">Pet\'s data updated!</string>
    <!--Pet Screen text's-->
    <string name="attach_file_content_description">Attach file for your pet</string>
    <string name="edit_pet">Edit Pet</string>
    <string name="see_details_pet_item_menu">See details pet</string>
    <string name="tooltip_nickname_of_pet">Nickname of pet</string>
    <string name="tooltip_name_of_pet">Name of pet</string>
    <string name="tooltip_birth_of_pet">Birth of pet</string>
    <string name="text_attach_file">Attach File</string>
    <string name="text_attach_title">Attach</string>
    <string name="text_notes_title">Notes</string>
    <string name="text_spens_title">Spends</string>
    <string name="text_add_reminder_for_pet">Add reminder\nfor this pet</string>
    <string name="text_share">Share</string>
    <string name="text_none">None</string>
    <string name="text_arara" translatable="false">Arara</string>
    <string name="text_get_picture_alert_item">Get picture from gallery</string>
    <string name="text_take_picture">Take picture</string>
    <string name="text_schnauzer" translatable="false">Schnauzer</string>
    <string name="text_doberman" translatable="false">Doberman</string>
    <string name="text_interval_life_pet">%d years %d months %d days</string>
    <string name="title_personal_data">Personal Data</string>
    <string name="title_choser_share">Share with…</string>

    <!--Settings-->
    <string name="title_dark_mode">Dark mode</string>
    <string name="template_version">Version %s</string>
    <string name="text_select_birth">Select Birth</string>
    <string name="text_settings">Settings</string>
    <!--Reminder-->
    <string name="text_reminder">Reminder</string>
    <string name="text_put_an_description_reminder">Put an description</string>
    <string name="text_put_an_name_for_your_reminder">Put an name for your reminder</string>
    <string name="hint_add_to_date">To date</string>
    <string name="text_select_pet_for_reminder">Select pet for reminder</string>
    <string name="text_select_date">Select to date</string>
    <string name="text_message_success_reminder_was_added">Reminder was added.</string>
    <string name="app_name_not_trim">My Daily Pet</string>
    <string name="rationale_message_pick_image">To get your pet\'s photo from the gallery, we need your read external permission.</string>
    <string name="text_goto_settings">Go to settings</string>
    <string name="rationale_message_capture_image">To capture your pet\'s photo, we need your camera permission.</string>
    <string name="message_date_is_not_valid">Date is not valid</string>
    <string name="message_date_reminder_is_minor_then_actual">The date need major or equal actual date</string>
    <string name="message_field_is_not_blank">The field cannot is blank</string>
    <string name="message_date_is_cannot_be_null">Date cannot be null</string>
    <string name="tooltip_view_pager_reminders">Click for see details reminder</string>
    <string name="message_field_havent_special_characters_or_numbers">Field cannot contain special characters or numbers</string>
    <string name="message_field_excedded_limit_characters">Field exceeded limit of characters</string>
    <string name="message_pet_was_added">Congrats!!! Pet is added.</string>
    <string name="hint_add_time">Add time</string>
    <string name="toolbar_title_my_pet">My pet</string>
    <string name="text_add_time">Add time</string>
    <string name="text_24_hrs_time_add_reminder" translatable="false">24 hrs</string>
    <string name="text_am_pm_add_reminder" translatable="false">AM/PM</string>
    <string name="title_task">Tasks</string>
    <string name="text_not_tasks_added_yet">Not tasks added yet for this pet</string>
    <string name="text_start_on_app">Start on app</string>
    <string name="title_repeat">Repeat</string>
    <string name="message_help_detail_reminder">In this screen you see details of reminder and edit this reminder.  Repeat reminder in icon repeat menu.</string>
    <string name="title_delete_all_reminders">Delete all reminders</string>
    <string name="message_alert_delete_all_reminders">Do you really want to delete all reminders?</string>
    <string name="message_alert_delete_reminder">Do you really want to delete this reminder?</string>

    <!--    Onboarding Screen-->
    <string name="text_onboarding_page1">Welcome to our pet routine app! Here, you can easily and efficiently monitor your pet\'s care and follow-up needs.</string>
    <string name="text_onboarding_page2">With our app, you can define routines and schedules to take care of your pet, in addition to receiving information about your pet\'s health status and needs.</string>
    <string name="text_onboarding_page3">With our app, you can easily track the progress of your care and receive notifications about changes in your pet\'s health status.</string>
    <string name="title_onboarding_page3">Remember all your appointments!</string>
    <string name="title_onboarding_page2">The best of both worlds!</string>
    <string name="title_onboarding_page1">An app to take care of the pet!</string>
    <string name="add_reminder_content_description">Add reminder for this pet</string>
    <string name="title_reminders">Reminders</string>
    <string name="text_complete">Complete</string>
    <string name="title_filter_list">Filter list</string>
    <string name="text_all_reminders">All reminders</string>
    <string name="message_alert_add_reminder_not_found_pet">"Add pet before create reminder. "</string>
    <string name="title_action_mode_edit_reminder">Edit Reminder</string>
    <string name="hint_add_description">Add description</string>
    <string name="hint_name_reminder">Name reminder</string>
    <string name="text_today">Today</string>
    <string name="title_share_pet">Share pet</string>
    <string name="text_not_implemented">\nNot implemented yet. An update with this feature will be coming soon.</string>
    <string name="text_error_occurred_contact_provider">Error occurred. Contact the provider this error.</string>

    <!--About Screen-->
    <string name="title_about">About</string>
    <string name="text_my_greeting_about">Welcome to my app. Hope it helped you in some way! 😀</string>
    <string name="text_presentation_about_settings">My name is João Vítor Queiroz Santos   I\'m an Android developer and I like to help people through programming.</string>
    <!--Tasks Screen-->
    <string name="title_tasks">Tasks</string>
    <string name="hint_add_task">Add task</string>
    <string name="message_cannot_create_task">To create a task, you must have a pet registered</string>
    <string name="text_filter_by_pet">Filter by Pet</string>
    <string name="message_error_weight_null">Weight cannot be null</string>
    <string name="message_click_in_pet_list">Press for at least 2 seconds to perform actions on this pet</string>
    <string name="message_alert_reminder_need_of_permission_notification">To schedule reminders with notification we need your permission to send notifications. If you don\'t allow it, you can schedule reminders but you won\'t be notified about them.  If you want to enable it, go to the app\'s settings and enable it in permissions.</string>
    <string name="message_image_not_found">Image not found</string>
</resources>