<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_delete_all_reminders_list"
        android:icon="@drawable/ic_delete"
        android:title="@string/title_delete_all_reminders"
        android:iconTint="?attr/colorTertiary"
        app:showAsAction="ifRoom"
        tools:targetApi="o" />
    <item
        android:id="@+id/item_filter_list"
        android:icon="@drawable/ic_filter_list"
        android:title="@string/title_filter_list"
        android:iconTint="?attr/colorTertiary"
        app:showAsAction="ifRoom"
        tools:targetApi="o">
        <menu>
            <item
                android:id="@+id/item_all_reminders_menu"
                android:title="@string/text_all_reminders" />
            <item
                android:id="@+id/item_today_menu_filter"
                android:title="@string/text_today" />
        </menu>
    </item>
</menu>