<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tb_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/text_settings"
            app:titleTextAppearance="@style/Theme.MyDailyPet.TextAppearanceTitleToolbar"
            app:navigationIcon="@drawable/ic_close"
            app:titleCentered="true"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/swt_dark_mode"
            android:layout_width="match_parent"
            android:text="@string/title_dark_mode"
            android:textStyle="bold"
            android:padding="@dimen/space_20dp"
            android:textSize="@dimen/text_size_16sp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_about_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_20dp"
            app:layout_constraintTop_toBottomOf="@id/swt_dark_mode">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_about"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_16sp"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="?attr/colorOnSecondary"
                app:srcCompat="@drawable/ic_arrow_right"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_version_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/text_size_16sp"
            tools:text="Version 1.0.0"
            android:layout_margin="@dimen/space_20dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>