<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.presentation.view.SettingsAboutFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tb_about_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back_ios"
            app:title="@string/title_about" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_m_photo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="@dimen/space_20dp"
            android:src="@drawable/m_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_m_name_about"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_20dp"
            android:lineSpacingExtra="@dimen/space_10dp"
            android:text="@string/text_presentation_about_settings"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_m_greeting_about" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_m_greeting_about"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_20dp"
            android:lineSpacingExtra="@dimen/space_10dp"
            android:text="@string/text_my_greeting_about"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/tv_m_name_about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/civ_m_photo" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_my_social_medias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_m_name_about"
            android:layout_marginTop="@dimen/space_20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_sm_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_10dp"
                android:src="@drawable/ic_linkedin"/>
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_sm_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_10dp"
                android:src="@drawable/ic_github"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>